k8s/platform/edge/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: platform
  labels:
    name: platform
    app.kubernetes.io/part-of: platform
